[gd_scene load_steps=4 format=3 uid="uid://b60twc2sk4q6f"]

[ext_resource type="Script" path="res://main_menu_buttons.gd" id="1_6di8w"]
[ext_resource type="FontFile" uid="uid://caf52fe8a36h" path="res://Assets/Fonts/CormorantSC-Medium.ttf" id="2_f8rab"]
[ext_resource type="Texture2D" uid="uid://cjen46c0ujppe" path="res://coollogo_com-20596803.png" id="2_qn826"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 1920.0
offset_bottom = 1080.0

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 0
offset_left = 64.0
offset_top = 599.0
offset_right = 1856.0
offset_bottom = 852.0
theme_override_constants/h_separation = 200
columns = 3
script = ExtResource("1_6di8w")

[node name="Button" type="Button" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/h_separation = 2000
theme_override_fonts/font = ExtResource("2_f8rab")
theme_override_font_sizes/font_size = 40
text = "Settings"

[node name="Button2" type="Button" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_f8rab")
theme_override_font_sizes/font_size = 40
text = "Play"

[node name="Button3" type="Button" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/h_separation = 2000
theme_override_fonts/font = ExtResource("2_f8rab")
theme_override_font_sizes/font_size = 40
text = "Quit"

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(962.615, 277.569)
scale = Vector2(2.63297, 2.63297)
texture = ExtResource("2_qn826")

[connection signal="pressed" from="GridContainer/Button" to="GridContainer" method="_on_button_pressed"]
[connection signal="pressed" from="GridContainer/Button2" to="GridContainer" method="_on_button_2_pressed"]
[connection signal="pressed" from="GridContainer/Button3" to="GridContainer" method="_on_button_3_pressed"]
